fixed .left-half sizing issues on smaller devices

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,14 +4,14 @@
       flex-flow: column;
    }
 
-   .left-half{
+   .main .left-half{
       min-width: 100%; 
-      height: fit-content;
+      min-height: fit-content;
    }
 
    .main .right-half{
       float: clear;
-      height: 100%;
+      min-height: 0%;
    }
 
    .middle-line{
@@ -66,7 +66,7 @@
 
 .main{
    padding: 0%;
-   min-height: calc(100%);
+   min-height: 100%;
 
    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
@@ -88,13 +88,13 @@
 
 .left-half{
    width: 50%;
-   height: 100%;
+   min-height: 100%;
    float: left;
 }
 
 .container-top-half {
    width: 100%;
-   height: 45%;
+   min-height: 30%;
    padding: 0px;
 
    display: flex;
@@ -117,7 +117,7 @@
 
 .container-bottom-half {
    width: 100%;
-   height: 50%;
+   min-height: fit-content;
 }
 
 .square-box{
@@ -134,7 +134,7 @@
    border-radius: 10px;
    box-shadow: -5px 5px rgb(0 0 0 / 0.2);
 
-   height: 94%;
+   min-height: 94%;
    background-color: #D7C0AE;
 }
 
